--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -88,3 +88,22 @@
 	pages = {103128},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\99RWZ2TT\\Erdem Okumus 和 Terzi - 2021 - Evaluating the role of urban fabric on surface urb.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\LCEDRVAQ\\S2210670721004108.html:text/html},
 }
+
+@article{hermosilla_assessing_2012,
+	title = {Assessing contextual descriptive features for plot-based classification of urban areas},
+	volume = {106},
+	issn = {0169-2046},
+	url = {https://www.sciencedirect.com/science/article/pii/S016920461200059X},
+	doi = {10.1016/j.landurbplan.2012.02.008},
+	abstract = {A methodology for mapping urban land-use types integrating information from multiple data sources (high spatial resolution imagery, LiDAR data, and cadastral plots) is presented. A large set of complementary descriptive features that allow distinguishing different urban structures (historical, urban, residential, and industrial) is extracted and, after a selection process, a plot-based image classification approach applied, facilitating to directly relate the classification results and the urban descriptive parameters computed to the existent land-use/land-cover units in geospatial databases. The descriptive features are extracted by considering different hierarchical scale levels with semantic meaning in urban environments: buildings, plots, and urban blocks. Plots are characterised by means of image-based (spectral and textural), three-dimensional, and geometrical features. In addition, two groups of contextual features are defined: internal and external. Internal contextual features describe the main land cover types inside the plot (buildings and vegetation). External contextual features describe each object in terms of the properties of the urban block to which it belongs. After the evaluation in an heterogeneous Mediterranean urban area, the land-use classification accuracy values obtained show that the complementary descriptive features proposed improve the characterisation of urban typologies. A progressive introduction of the different groups of descriptive features in the classification tests show how the subsequent addition of internal and external contextual features have a positive effect by increasing the final accuracy of the urban classes considered in this study.},
+	language = {en},
+	number = {1},
+	urldate = {2023-03-24},
+	journal = {Landscape and Urban Planning},
+	author = {Hermosilla, T. and Ruiz, L. A. and Recio, J. A. and Cambra-López, M.},
+	month = may,
+	year = {2012},
+	keywords = {Classification, Contextual features, High-resolution imagery, Land-use mapping, LiDAR, Urban areas},
+	pages = {124--137},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\RVFSKFLK\\Hermosilla 等 - 2012 - Assessing contextual descriptive features for plot.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\FGC2HCQG\\S016920461200059X.html:text/html},
+}
