--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -107,3 +107,22 @@
 	pages = {124--137},
 	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\RVFSKFLK\\Hermosilla 等 - 2012 - Assessing contextual descriptive features for plot.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\FGC2HCQG\\S016920461200059X.html:text/html},
 }
+
+@article{huang_mapping_2016,
+	title = {Mapping sub-pixel urban expansion in {China} using {MODIS} and {DMSP}/{OLS} nighttime lights},
+	volume = {175},
+	issn = {0034-4257},
+	url = {https://www.sciencedirect.com/science/article/pii/S0034425715302637},
+	doi = {10.1016/j.rse.2015.12.042},
+	abstract = {Urbanization accelerated rapidly in China during the first decade of the 21st century, largely at the expense of agricultural lands. To improve available regional information related to the coupled dynamics between these two land use types, we fused data from the Moderate Resolution Imaging Spectroradiometer (MODIS) and stable nighttime lights observations from DMSP/OLS instruments to map fractional urban cover at 250m spatial resolution for cities in Eastern, Central, and Southern China where recent urban expansion has been rapid and pronounced. To accomplish this, we constructed Random Forest regression models to estimate sub-pixel urban percentage for 2001 and 2010 using high quality calibration information derived from Landsat data. Separate models were built for temperate and tropical regions and then evaluated for nine cities between 18,000 and 31,000km2 in area. Urban area estimated from MODIS compared favorably with Landsat-based results, with mean absolute errors of {\textasciitilde}9–15\%. Tests of different input feature sets showed that including data from downscaled MODIS 500m bands and nighttime lights can improve estimates of urban land area compared to using MODIS 250m features alone. Based on these results we produced wall-to-wall maps of urban land use in 2001 and 2010 for four MODIS tiles covering temperate and subtropical China, thereby demonstrating the utility of coarse spatial resolution data for mapping urban land use and loss of agricultural land at regional and larger scales.},
+	language = {en},
+	urldate = {2023-03-24},
+	journal = {Remote Sensing of Environment},
+	author = {Huang, Xiaoman and Schneider, Annemarie and Friedl, Mark A.},
+	month = mar,
+	year = {2016},
+	keywords = {Fractional urban cover, MODIS, Nighttime lights, Random Forest regression},
+	pages = {92--108},
+	file = {ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\7J59QPQP\\S0034425715302637.html:text/html},
+}
+
