--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -126,3 +126,21 @@
 	file = {ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\7J59QPQP\\S0034425715302637.html:text/html},
 }
 
+@article{deilami_modelling_2017,
+	title = {Modelling the urban heat island effect of smart growth policy scenarios in {Brisbane}},
+	volume = {64},
+	issn = {0264-8377},
+	url = {https://www.sciencedirect.com/science/article/pii/S0264837716313138},
+	doi = {10.1016/j.landusepol.2017.02.027},
+	abstract = {Smart growth policy has been identified as a panacea to tackle a range of undesirable outcomes of sprawl development. Various neighbourhood planning concepts have been developed following smart growth principles such as transit oriented development, and infill development. Existing empirical studies, however, do not answer to a key policy question: can smart growth policies reduce the urban heat island (UHI) effect? If so, what type of smart growth policy would be most effective? This research examined the questions by deriving five alternative neighbourhood planning scenarios for Brisbane for 2023: a) business as usual, b) transit oriented development (TOD), c) infill development, d) motorway corridor oriented development, and e) sprawl development. The research utilises Landsat remote sensing images of 1991, 2004, and 2013 to: first, estimate and validate a Geographically Weighted Regression model in order to identify statistically significant factors influencing the UHI intensities in Brisbane; and second, predict the UHI intensities of the five policy scenarios. Two factors were identified to have significant influence on the UHI intensities in Brisbane: population density, and porosity. Results show that compared to the 2004 and 2013 levels, Brisbane will respectively experience a higher and lower levels of UHI effect in 2023, irrespective of the policy scenarios. On average, the infill development scenario, as a smart growth policy, has a marginally better potential to mitigate the UHI effect in Brisbane in 2023 compared to the sprawl development scenario conditional on the definition applied in this research. The UHI effect would be more equitably balanced spatially under the sprawl development scenario.},
+	language = {en},
+	urldate = {2023-03-24},
+	journal = {Land Use Policy},
+	author = {Deilami, Kaveh and Kamruzzaman, Md.},
+	month = may,
+	year = {2017},
+	keywords = {Geographically Weighted Regression, Neighbourhood planning, Policy scenarios, Smart growth, Support vector machine, Urban heat island},
+	pages = {38--55},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\XPG9ERDH\\Deilami 和 Kamruzzaman - 2017 - Modelling the urban heat island effect of smart gr.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\KPYA5MPF\\S0264837716313138.html:text/html},
+}
+
